--- a/art.html
+++ b/art.html
@@ -3,27 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>Self Care Example</title>
-    <meta name="description" content="360&deg; Image - A-Frame">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-sky src="art.jpg" rotation="0 -130 0"></a-sky>
-      <!-- <a-text font="kelsonsans" value="Self-care is any activity that we do deliberately in order to take care of our mental, emotional, and physical health. Although it’s a simple concept in theory, it’s something we very often overlook. Good self-care is key to improved mood and reduced anxiety. It’s also key to a good relationship with oneself and others.
+      <a-sky
+      src="art.jpg"
+      rotation="0 -130 0">
+      </a-sky>
 
-What isn’t self-care?
-Knowing what self-care is not might be even more important. It is not something that we force ourselves to do, or something we don’t enjoy doing. As Agnes Wainman explained, self-care is “something that refuels us, rather than takes from us.”
+    <a-text
+    font="kelsonsans"
+    value=
+    "Self-care is any activity that we do deliberately in order to take care of our mental, emotional, and physical health. Although it’s a simple concept in theory, it’s something we very often overlook. Good self-care is key to improved mood and reduced anxiety. It’s also key to a good relationship with oneself and others."
+    width="5"
+    position="-2.5 1.7 -2.3"
+    rotation="0 15 0">
+    </a-text>
 
-Self-care isn’t a selfish act either. It is not only about considering our needs; it is rather about knowing what we need to do in order to take care of ourselves, being subsequently, able to take care of others as well. That is, if I don’t take enough care of myself, I won’t be in the place to give to my loved ones either"
-width="5" position="-2.5 1.7 -2.3" rotation="0 15 0"></a-text> -->
+    <a-text
+    font="kelsonsans"
+    value="What isn’t self-care?
+    Knowing what self-care is not might be even more important. It is not something that we force ourselves to do, or something we don’t enjoy doing. As Agnes Wainman explained, self-care is “something that refuels us, rather than takes from us.”"
+    width="5"
+    position="2.653 0.834 -2.3"
+    rotation="0 -82 0">
+    </a-text>
 
-<a-text font="kelsonsans" value="Self-care is any activity that we do deliberately in order to take care of our mental, emotional, and physical health. Although it’s a simple concept in theory, it’s something we very often overlook. Good self-care is key to improved mood and reduced anxiety. It’s also key to a good relationship with oneself and others."
-width="5" position="-2.5 1.7 -2.3" rotation="0 15 0"></a-text>
-<a-text font="kelsonsans" value="What isn’t self-care?
-Knowing what self-care is not might be even more important. It is not something that we force ourselves to do, or something we don’t enjoy doing. As Agnes Wainman explained, self-care is “something that refuels us, rather than takes from us.”"
-width="5" position="2.653 0.834 -2.3" rotation="0 -82 0"></a-text>
-<a-text font="kelsonsans" value="Self-care isn’t a selfish act either. It is not only about considering our needs; it is rather about knowing what we need to do in order to take care of ourselves, being subsequently, able to take care of others as well. That is, if I don’t take enough care of myself, I won’t be in the place to give to my loved ones either"
-width="5" position="0.74 1.7 3.75" rotation="0 -210 0"></a-text>
+    <a-text
+    font="kelsonsans"
+    value="Self-care isn’t a selfish act either. It is not only about considering our needs; it is rather about knowing what we need to do in order to take care of ourselves, being subsequently, able to take care of others as well. That is, if I don’t take enough care of myself, I won’t be in the place to give to my loved ones either"
+    width="5"
+    position="0.74 1.7 3.75"
+    rotation="0 -210 0">
+    </a-text>
+
     </a-scene>
   </body>
 </html>
