--- a/helloworld.html
+++ b/helloworld.html
@@ -6,10 +6,9 @@
   </head>
   <body>
     <a-scene>
-      <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box> -->
       <!-- for live editing inspector hit ctrl+alt+i in your browser with the project open-->
-            <a-text value="Hello, World!" position="-1 1.7 -3" width="10" color="black"></a-text>
-            <a-sky color="#ECECEC"></a-sky>
+            <a-text value="Hello, World!" position="-1 1.7 -3" width="10" color="pink"></a-text>
+            <a-sky src="firework.mov"></a-sky>
     </a-scene>
   </body>
 </html>
