--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <style>
       body{
         font-size:30px;
-        background-color: lightblue;
+        /* background-color: lightblue;
         background: linear-gradient(90deg, rgba(9,99,121,1) 15%, rgba(89,9,121,1) 31%, rgba(8,33,137,1) 44%, rgba(100,0,255,1) 100%);
-        color: black;
+        color: black; */
       }
       a{
         text-decoration: none;
@@ -20,7 +20,7 @@
         color: palegreen;
       }
       a:hover{
-        text-shadow: black;
+        color: black;
       }
       .select{
         margin: 10%;
@@ -38,7 +38,7 @@
     <a href="helloworld.html">hello, world!</a>
       </li>
       <li>
-    <a href="baba.html"> ✌.|•͡˘‿•͡˘|.✌ leruihlaiufvhladfuivjkhnalusidjbvqlihbvliahkvbkj </a>
+    <a href="baba.html">✌.|•͡˘‿•͡˘|.✌</a>
       </li>
       </ul>
     </div>
