--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <body>
     <style>
       body{
-        font-size:30px;
-        /* background-color: lightblue;
-        background: linear-gradient(90deg, rgba(9,99,121,1) 15%, rgba(89,9,121,1) 31%, rgba(8,33,137,1) 44%, rgba(100,0,255,1) 100%);
-        color: black; */
+        font-size:40px;
+        /* background-color: lightblue; */
+        /* background: linear-gradient(90deg, rgba(9,99,121,1) 15%, rgba(89,9,121,1) 31%, rgba(8,33,137,1) 44%, rgba(100,0,255,1) 100%); */
+        color: black;
       }
       a{
         text-decoration: none;
+        color: palegreen;
       }
       a:visited {
         text-decoration: none;
@@ -23,6 +24,7 @@
         color: black;
       }
       .select{
+        color: palegreen;
         margin: 10%;
         line-height: 2;
         text-decoration: none;
