--- a/helloworld.html
+++ b/helloworld.html
@@ -8,7 +8,11 @@
     <a-scene>
       <!-- for live editing inspector hit ctrl+alt+i in your browser with the project open-->
             <a-text value="Hello, World!" position="-1 1.7 -3" width="10" color="pink"></a-text>
-            <a-sky src="firework.mov"></a-sky>
+            <a-sky src="city.jpeg"></a-sky>
+
+            <a-assets>
+              <video id="firework" autoplay loop="true" src="firework.mov"></video>
+            </a-assets>
     </a-scene>
   </body>
 </html>
